<resources>
    <string name="app_name">CDL Prep Test</string>
    <!--    <string name="app_name" parent="Theme.MaterialComponents.DayNight">CDL Prep Test</string>-->
    <string name="title_activity_navigation_tab">NavigationTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="studyPlan">Based on the time remaining until your exam date,
    We recommend you should mastered over %2$d questions per day to get the best exam results </string>
    <string name="start_test">Start Test</string>
    <string name="customize_test">Customize Test</string>
    <string name="test_info_1">You are about to take the simulator test. If you pass this test at least 5 times,\nCongratulations! You are ready for you real test.</string>
    <string name="test_info_2">\u2022 As close as it gets to the actual test.\n
    \u2022 %1$d questions.\n
    \u2022 %2$d mistakes allowed.\n
    \u2022 New questions every time you re-take.\n
    \u2022 Stop as soon as you have reached the failing score.</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_continue">Continue</string>
    <string name="customize_questions">Number of questions</string>
    <string name="customize_mistakes">Number of allowed mistakes</string>
    <string name="customize_stop_max_mistake">Stop when number of mistakes is reached</string>
    <string name="customize_feedback">Instant feedback</string>
    <string name="customize_content">Content setting</string>
    <string name="btn_save">Save</string>
    <string name="img_favorite_desc">ImageView showing if question is a favorite.</string>
    <string name="pass_message">Passed!</string>
    <string name="fail_message">Failed!</string>
    <string name="btn_start_again">Start Again</string>
    <string name="btn_review_result">Review Result</string>

    <string-array name="learn_areas">
        <item>Air Brakes</item>
        <item>Class C</item>
        <item>General Knowledge</item>
        <item>Combination (Class A)</item>
    </string-array>

    //Test Values
    <string-array name="state_names1">
        <item>tab10</item>
        <item>tab2</item>
        <item>tab3</item>
        <item>tab4</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="state_names">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="learn_titles">
        <item>General Knowledge</item>
        <item>Hazmat</item>
        <item>Passenger Vehicles</item>
        <item>Air Brake</item>
        <item>Combination Vehicles</item>
        <item>Doubles/ Triples Trailers</item>
        <item>Tanker Vehicles</item>
        <item>School Bus</item>
        <item>Pre-Trip</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="review_titles">
        <item>Weak questions</item>
        <item>Medium questions</item>
        <item>Strong questions</item>
        <item>All familiar questions</item>
        <item>Your favourite questions</item>
    </string-array>
</resources>


